src/main/java/AlgebraExpressionParser.java
// Generated from C:/Users/S�awek/IdeaProjects/ProjektKompilatory\AlgebraExpression.g4 by ANTLR 4.7
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class AlgebraExpressionParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		EQUAL=1, PLUS=2, MINUS=3, MULTIPLICATION=4, DIVISION=5, POW=6, LEFT_PARENT=7, 
		RIGHT_PARENT=8, MULTIPLICATION_MATRIX=9, MATRIX_TRANS=10, MATRIX_INVERT=11, 
		COS=12, CTAN=13, SIN=14, TAN=15, ACOS=16, ACTAN=17, ASIN=18, ATAN=19, 
		LN=20, LOG=21, SQRT=22, PI=23, E=24, NEWLINE=25, WHITESPACE=26, COMMA=27, 
		OPENBRACKET=28, SEMICOLON=29, SPACES=30, CLOSEBRACKET=31, VARIABLE=32, 
		NUMBER=33;
	public static final int
		RULE_input = 0, RULE_setVariable = 1, RULE_expression = 2, RULE_multiplicationOrDivision = 3, 
		RULE_matrixdef = 4, RULE_matrixrows = 5, RULE_matrixrow = 6, RULE_pow = 7, 
		RULE_signAtom = 8, RULE_atom = 9, RULE_function = 10;
	public static final String[] ruleNames = {
		"input", "setVariable", "expression", "multiplicationOrDivision", "matrixdef", 
		"matrixrows", "matrixrow", "pow", "signAtom", "atom", "function"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "'='", "'+'", "'-'", "'*'", "'/'", "'^'", "'('", "')'", "'&'", "'tran'", 
		"'inv'", "'cos'", "'ctan'", "'sin'", "'tan'", "'acos'", "'actan'", "'asin'", 
		"'atan'", "'ln'", "'log'", "'sqrt'", "'pi'", "'e'", "'\n'", null, "','", 
		"'['", "';'", null, "']'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, "EQUAL", "PLUS", "MINUS", "MULTIPLICATION", "DIVISION", "POW", "LEFT_PARENT", 
		"RIGHT_PARENT", "MULTIPLICATION_MATRIX", "MATRIX_TRANS", "MATRIX_INVERT", 
		"COS", "CTAN", "SIN", "TAN", "ACOS", "ACTAN", "ASIN", "ATAN", "LN", "LOG", 
		"SQRT", "PI", "E", "NEWLINE", "WHITESPACE", "COMMA", "OPENBRACKET", "SEMICOLON", 
		"SPACES", "CLOSEBRACKET", "VARIABLE", "NUMBER"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "AlgebraExpression.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public AlgebraExpressionParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class InputContext extends ParserRuleContext {
		public InputContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_input; }
	 
		public InputContext() { }
		public void copyFrom(InputContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class ToSetVariableContext extends InputContext {
		public SetVariableContext setVariable() {
			return getRuleContext(SetVariableContext.class,0);
		}
		public TerminalNode NEWLINE() { return getToken(AlgebraExpressionParser.NEWLINE, 0); }
		public InputContext input() {
			return getRuleContext(InputContext.class,0);
		}
		public ToSetVariableContext(InputContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AlgebraExpressionListener ) ((AlgebraExpressionListener)listener).enterToSetVariable(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AlgebraExpressionListener ) ((AlgebraExpressionListener)listener).exitToSetVariable(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AlgebraExpressionVisitor ) return ((AlgebraExpressionVisitor<? extends T>)visitor).visitToSetVariable(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class CalculateContext extends InputContext {
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public TerminalNode EOF() { return getToken(AlgebraExpressionParser.EOF, 0); }
		public TerminalNode NEWLINE() { return getToken(AlgebraExpressionParser.NEWLINE, 0); }
		public CalculateContext(InputContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AlgebraExpressionListener ) ((AlgebraExpressionListener)listener).enterCalculate(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AlgebraExpressionListener ) ((AlgebraExpressionListener)listener).exitCalculate(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AlgebraExpressionVisitor ) return ((AlgebraExpressionVisitor<? extends T>)visitor).visitCalculate(this);
			else return visitor.visitChildren(this);
		}
	}

	public final InputContext input() throws RecognitionException {
		InputContext _localctx = new InputContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_input);
		int _la;
		try {
			setState(32);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				_localctx = new ToSetVariableContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(22);
				setVariable();
				setState(23);
				match(NEWLINE);
				setState(24);
				input();
				}
				break;
			case 2:
				_localctx = new CalculateContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(26);
				expression(0);
				setState(28);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==NEWLINE) {
					{
					setState(27);
					match(NEWLINE);
					}
				}

				setState(30);
				match(EOF);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SetVariableContext extends ParserRuleContext {
		public SetVariableContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_setVariable; }
	 
		public SetVariableContext() { }
		public void copyFrom(SetVariableContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class SettingVariableContext extends SetVariableContext {
		public TerminalNode VARIABLE() { return getToken(AlgebraExpressionParser.VARIABLE, 0); }
		public TerminalNode EQUAL() { return getToken(AlgebraExpressionParser.EQUAL, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public SettingVariableContext(SetVariableContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AlgebraExpressionListener ) ((AlgebraExpressionListener)listener).enterSettingVariable(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AlgebraExpressionListener ) ((AlgebraExpressionListener)listener).exitSettingVariable(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AlgebraExpressionVisitor ) return ((AlgebraExpressionVisitor<? extends T>)visitor).visitSettingVariable(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SetVariableContext setVariable() throws RecognitionException {
		SetVariableContext _localctx = new SetVariableContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_setVariable);
		try {
			_localctx = new SettingVariableContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(34);
			match(VARIABLE);
			setState(35);
			match(EQUAL);
			setState(36);
			expression(0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ExpressionContext extends ParserRuleContext {
		public ExpressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expression; }
	 
		public ExpressionContext() { }
		public void copyFrom(ExpressionContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class ToMultiplicationOrDivisionContext extends ExpressionContext {
		public MultiplicationOrDivisionContext multiplicationOrDivision() {
			return getRuleContext(MultiplicationOrDivisionContext.class,0);
		}
		public ToMultiplicationOrDivisionContext(ExpressionContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AlgebraExpressionListener ) ((AlgebraExpressionListener)listener).enterToMultiplicationOrDivision(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AlgebraExpressionListener ) ((AlgebraExpressionListener)listener).exitToMultiplicationOrDivision(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AlgebraExpressionVisitor ) return ((AlgebraExpressionVisitor<? extends T>)visitor).visitToMultiplicationOrDivision(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class PlusContext extends ExpressionContext {
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public TerminalNode PLUS() { return getToken(AlgebraExpressionParser.PLUS, 0); }
		public MultiplicationOrDivisionContext multiplicationOrDivision() {
			return getRuleContext(MultiplicationOrDivisionContext.class,0);
		}
		public PlusContext(ExpressionContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AlgebraExpressionListener ) ((AlgebraExpressionListener)listener).enterPlus(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AlgebraExpressionListener ) ((AlgebraExpressionListener)listener).exitPlus(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AlgebraExpressionVisitor ) return ((AlgebraExpressionVisitor<? extends T>)visitor).visitPlus(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class MinusContext extends ExpressionContext {
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public TerminalNode MINUS() { return getToken(AlgebraExpressionParser.MINUS, 0); }
		public MultiplicationOrDivisionContext multiplicationOrDivision() {
			return getRuleContext(MultiplicationOrDivisionContext.class,0);
		}
		public MinusContext(ExpressionContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AlgebraExpressionListener ) ((AlgebraExpressionListener)listener).enterMinus(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AlgebraExpressionListener ) ((AlgebraExpressionListener)listener).exitMinus(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AlgebraExpressionVisitor ) return ((AlgebraExpressionVisitor<? extends T>)visitor).visitMinus(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ExpressionContext expression() throws RecognitionException {
		return expression(0);
	}

	private ExpressionContext expression(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		ExpressionContext _localctx = new ExpressionContext(_ctx, _parentState);
		ExpressionContext _prevctx = _localctx;
		int _startState = 4;
		enterRecursionRule(_localctx, 4, RULE_expression, _p);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			{
			_localctx = new ToMultiplicationOrDivisionContext(_localctx);
			_ctx = _localctx;
			_prevctx = _localctx;

			setState(39);
			multiplicationOrDivision(0);
			}
			_ctx.stop = _input.LT(-1);
			setState(49);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,3,_ctx);
			while ( _alt!=2 && _alt!= ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					setState(47);
					_errHandler.sync(this);
					switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
					case 1:
						{
						_localctx = new PlusContext(new ExpressionContext(_parentctx, _parentState));
						pushNewRecursionContext(_localctx, _startState, RULE_expression);
						setState(41);
						if (!(precpred(_ctx, 3))) throw new FailedPredicateException(this, "precpred(_ctx, 3)");
						setState(42);
						match(PLUS);
						setState(43);
						multiplicationOrDivision(0);
						}
						break;
					case 2:
						{
						_localctx = new MinusContext(new ExpressionContext(_parentctx, _parentState));
						pushNewRecursionContext(_localctx, _startState, RULE_expression);
						setState(44);
						if (!(precpred(_ctx, 2))) throw new FailedPredicateException(this, "precpred(_ctx, 2)");
						setState(45);
						match(MINUS);
						setState(46);
						multiplicationOrDivision(0);
						}
						break;
					}
					} 
				}
				setState(51);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,3,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	public static class MultiplicationOrDivisionContext extends ParserRuleContext {
		public MultiplicationOrDivisionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_multiplicationOrDivision; }
	 
		public MultiplicationOrDivisionContext() { }
		public void copyFrom(MultiplicationOrDivisionContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class MatrixTranspContext extends MultiplicationOrDivisionContext {
		public TerminalNode MATRIX_TRANS() { return getToken(AlgebraExpressionParser.MATRIX_TRANS, 0); }
		public MultiplicationOrDivisionContext multiplicationOrDivision() {
			return getRuleContext(MultiplicationOrDivisionContext.class,0);
		}
		public MatrixTranspContext(MultiplicationOrDivisionContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AlgebraExpressionListener ) ((AlgebraExpressionListener)listener).enterMatrixTransp(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AlgebraExpressionListener ) ((AlgebraExpressionListener)listener).exitMatrixTransp(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AlgebraExpressionVisitor ) return ((AlgebraExpressionVisitor<? extends T>)visitor).visitMatrixTransp(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class MultiplicationContext extends MultiplicationOrDivisionContext {
		public MultiplicationOrDivisionContext multiplicationOrDivision() {
			return getRuleContext(MultiplicationOrDivisionContext.class,0);
		}
		public TerminalNode MULTIPLICATION() { return getToken(AlgebraExpressionParser.MULTIPLICATION, 0); }
		public PowContext pow() {
			return getRuleContext(PowContext.class,0);
		}
		public MultiplicationContext(MultiplicationOrDivisionContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AlgebraExpressionListener ) ((AlgebraExpressionListener)listener).enterMultiplication(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AlgebraExpressionListener ) ((AlgebraExpressionListener)listener).exitMultiplication(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AlgebraExpressionVisitor ) return ((AlgebraExpressionVisitor<? extends T>)visitor).visitMultiplication(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class ToMatrixContext extends MultiplicationOrDivisionContext {
		public MatrixdefContext matrixdef() {
			return getRuleContext(MatrixdefContext.class,0);
		}
		public ToMatrixContext(MultiplicationOrDivisionContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AlgebraExpressionListener ) ((AlgebraExpressionListener)listener).enterToMatrix(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AlgebraExpressionListener ) ((AlgebraExpressionListener)listener).exitToMatrix(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AlgebraExpressionVisitor ) return ((AlgebraExpressionVisitor<? extends T>)visitor).visitToMatrix(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class MatrixMinusContext extends MultiplicationOrDivisionContext {
		public MultiplicationOrDivisionContext multiplicationOrDivision() {
			return getRuleContext(MultiplicationOrDivisionContext.class,0);
		}
		public TerminalNode MINUS() { return getToken(AlgebraExpressionParser.MINUS, 0); }
		public MatrixdefContext matrixdef() {
			return getRuleContext(MatrixdefContext.class,0);
		}
		public MatrixMinusContext(MultiplicationOrDivisionContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AlgebraExpressionListener ) ((AlgebraExpressionListener)listener).enterMatrixMinus(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AlgebraExpressionListener ) ((AlgebraExpressionListener)listener).exitMatrixMinus(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AlgebraExpressionVisitor ) return ((AlgebraExpressionVisitor<? extends T>)visitor).visitMatrixMinus(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class MatrixInverseContext extends MultiplicationOrDivisionContext {
		public TerminalNode MATRIX_INVERT() { return getToken(AlgebraExpressionParser.MATRIX_INVERT, 0); }
		public MultiplicationOrDivisionContext multiplicationOrDivision() {
			return getRuleContext(MultiplicationOrDivisionContext.class,0);
		}
		public MatrixInverseContext(MultiplicationOrDivisionContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AlgebraExpressionListener ) ((AlgebraExpressionListener)listener).enterMatrixInverse(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AlgebraExpressionListener ) ((AlgebraExpressionListener)listener).exitMatrixInverse(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AlgebraExpressionVisitor ) return ((AlgebraExpressionVisitor<? extends T>)visitor).visitMatrixInverse(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class MatrixMultiplicationContext extends MultiplicationOrDivisionContext {
		public MultiplicationOrDivisionContext multiplicationOrDivision() {
			return getRuleContext(MultiplicationOrDivisionContext.class,0);
		}
		public TerminalNode MULTIPLICATION_MATRIX() { return getToken(AlgebraExpressionParser.MULTIPLICATION_MATRIX, 0); }
		public MatrixdefContext matrixdef() {
			return getRuleContext(MatrixdefContext.class,0);
		}
		public MatrixMultiplicationContext(MultiplicationOrDivisionContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AlgebraExpressionListener ) ((AlgebraExpressionListener)listener).enterMatrixMultiplication(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AlgebraExpressionListener ) ((AlgebraExpressionListener)listener).exitMatrixMultiplication(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AlgebraExpressionVisitor ) return ((AlgebraExpressionVisitor<? extends T>)visitor).visitMatrixMultiplication(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class ToPowerContext extends MultiplicationOrDivisionContext {
		public PowContext pow() {
			return getRuleContext(PowContext.class,0);
		}
		public ToPowerContext(MultiplicationOrDivisionContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AlgebraExpressionListener ) ((AlgebraExpressionListener)listener).enterToPower(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AlgebraExpressionListener ) ((AlgebraExpressionListener)listener).exitToPower(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AlgebraExpressionVisitor ) return ((AlgebraExpressionVisitor<? extends T>)visitor).visitToPower(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class DivisionContext extends MultiplicationOrDivisionContext {
		public MultiplicationOrDivisionContext multiplicationOrDivision() {
			return getRuleContext(MultiplicationOrDivisionContext.class,0);
		}
		public TerminalNode DIVISION() { return getToken(AlgebraExpressionParser.DIVISION, 0); }
		public PowContext pow() {
			return getRuleContext(PowContext.class,0);
		}
		public DivisionContext(MultiplicationOrDivisionContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AlgebraExpressionListener ) ((AlgebraExpressionListener)listener).enterDivision(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AlgebraExpressionListener ) ((AlgebraExpressionListener)listener).exitDivision(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AlgebraExpressionVisitor ) return ((AlgebraExpressionVisitor<? extends T>)visitor).visitDivision(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class MatrixPlusContext extends MultiplicationOrDivisionContext {
		public MultiplicationOrDivisionContext multiplicationOrDivision() {
			return getRuleContext(MultiplicationOrDivisionContext.class,0);
		}
		public TerminalNode PLUS() { return getToken(AlgebraExpressionParser.PLUS, 0); }
		public MatrixdefContext matrixdef() {
			return getRuleContext(MatrixdefContext.class,0);
		}
		public MatrixPlusContext(MultiplicationOrDivisionContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AlgebraExpressionListener ) ((AlgebraExpressionListener)listener).enterMatrixPlus(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AlgebraExpressionListener ) ((AlgebraExpressionListener)listener).exitMatrixPlus(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AlgebraExpressionVisitor ) return ((AlgebraExpressionVisitor<? extends T>)visitor).visitMatrixPlus(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class MatrixScalarContext extends MultiplicationOrDivisionContext {
		public MultiplicationOrDivisionContext multiplicationOrDivision() {
			return getRuleContext(MultiplicationOrDivisionContext.class,0);
		}
		public TerminalNode MULTIPLICATION() { return getToken(AlgebraExpressionParser.MULTIPLICATION, 0); }
		public MatrixdefContext matrixdef() {
			return getRuleContext(MatrixdefContext.class,0);
		}
		public MatrixScalarContext(MultiplicationOrDivisionContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AlgebraExpressionListener ) ((AlgebraExpressionListener)listener).enterMatrixScalar(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AlgebraExpressionListener ) ((AlgebraExpressionListener)listener).exitMatrixScalar(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AlgebraExpressionVisitor ) return ((AlgebraExpressionVisitor<? extends T>)visitor).visitMatrixScalar(this);
			else return visitor.visitChildren(this);
		}
	}

	public final MultiplicationOrDivisionContext multiplicationOrDivision() throws RecognitionException {
		return multiplicationOrDivision(0);
	}

	private MultiplicationOrDivisionContext multiplicationOrDivision(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		MultiplicationOrDivisionContext _localctx = new MultiplicationOrDivisionContext(_ctx, _parentState);
		MultiplicationOrDivisionContext _prevctx = _localctx;
		int _startState = 6;
		enterRecursionRule(_localctx, 6, RULE_multiplicationOrDivision, _p);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(59);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case MATRIX_TRANS:
				{
				_localctx = new MatrixTranspContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;
